--- a/README
+++ b/README
@@ -1,9 +1,23 @@
-├── index.html
-├── scripts/
-│   ├── config.js
-│   ├── treeBuilder.js
-│   ├── renderTree.js
-│   ├── handleTreeClick.js
-│   ├── loadArticle.js
-│   ├── replaceImageSources.js
-│   └── utils.js
++--- CNAME
++--- index.bak.html
++--- index.html
++--- knowledge.html
++--- kobe.png
++--- LICENSE
++--- project.html
++--- README
++--- script.js
++--- style.css
++--- style.css.map
++--- style.scss
++--- tool.html
++--- scripts
+|   +--- backToTop.js
+|   +--- config.js
+|   +--- handleTreeClick.js
+|   +--- loadArticle.js
+|   +--- renderTree.js
+|   +--- replaceImageSources.js
+|   +--- themeManger.js
+|   +--- treeBuilder.js
+|   +--- utils.js
